@@ -37,7 +37,7 @@
 /**
  * Current client-server protocol version
  */
-#define CLIENT_PROTOCOL_VERSION           41
+#define CLIENT_PROTOCOL_VERSION           42
 
 /**
  * Current mobile device protocol version
